# discord-rpc-gui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml  release_crate.yml  release_draft.yml
resources/linux/: discord-rpc-gui.desktop
resources/osx/discord-rpc-gui.app/Contents/: info.plist
resources/osx/discord-rpc-gui.app/Contents/Resources/: discord-rpc-gui.icns
resources/windows/: res.rc
src/: main.rs  styles.rs
