[package]
name = "discord-rpc-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
discord-rich-presence = "0.1.8"
anyhow = "1.0"
log = { version="0.4.14", features=["std"] }
notify-rust = "4.5.6"
url = "2.2.2"