[package]
name = "discord-rpc-gui"
version = "0.1.1"
edition = "2021"
authors=["daggy1234"]
description="A GUI app to control discord rich-prescence"
license="GPL-3.0"
keywords=["ui", "discord", "rpc", "iced"]
repository="https://github.com/Daggy1234/discord-rpc-gui/"
categories=["gui", "os"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
discord-rich-presence = "0.1.8"
anyhow = "1.0"
log = { version="0.4.14", features=["std"] }
notify-rust = "4.5.6"
url = "2.2.2"


[build-dependencies]
embed-resource = "1.3.3"